--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+.metadata
 */bin/
 */target/
 */.classpath
@@ -5,5 +6,6 @@
 */.settings/
 */.cache-main
 */.cache-tests
-*/project/project/
+*/.worksheet
+*/Project/project/
 */project/target/
